--- a/debian/rules
+++ b/debian/rules
@@ -18,6 +18,7 @@ build-arch-stamp: Makefile
 	if dpkg-buildflags --status >/dev/null 2>&1 ; then dpkg-buildflags --status ; fi
 	+$(call build_target,console)
 	+$(call build_target,x11)
+	+$(call build_target,qt)
 	+$(call build_target,lisp)
 	touch src/nethack.dummy ; sleep 2
 	$(MAKE) -j1 LFLAGS='$(LFLAGS)' CFLAGS='$(CFLAGS) -DUSE_XPM' \
@@ -28,7 +29,7 @@ build-arch-stamp: Makefile
 	$(MAKE) -C util LFLAGS='$(LFLAGS)' CFLAGS='$(CFLAGS)' recover
 	touch $@
 
-TARGETS = console lisp x11
+TARGETS = console lisp x11 qt
 
 define build_target
 	$(MAKE) clean
@@ -36,21 +37,29 @@ define build_target
 	sleep 2
 	$(MAKE) LFLAGS='$(LFLAGS)' CFLAGS='$(CFLAGS) $(EXTRACPP_$1)' \
 		WINSRC='$(SRC_$1)' WINOBJ='$(OBJ_$1)' WINLIB='$(LIB_$1)' \
-		$(EXTRA_$1) GAME='nethack.$1' \
+		LINK='$(LINK_$1)' $(EXTRA_$1) GAME='nethack.$1' \
 		-C src 'nethack.$1'
 endef
 SRC_console = $$(WINTTYSRC) $$(WINCURSESSRC)
 OBJ_console = $$(WINTTYOBJ) $$(WINCURSESOBJ)
 LIB_console = -lncurses
+LINK_console = $$(CC)
 EXTRACPP_console = -DCURSES_GRAPHICS
 SRC_x11 = $$(WINTTYSRC) $$(WINX11SRC)
 OBJ_x11 = $$(WINTTYOBJ) $$(WINX11OBJ)
 LIB_x11 = -lncurses -lXaw -Wl,--as-needed -lXmu -lXext -Wl,--no-as-needed -lXt -lXpm -lX11 -Wl,--as-needed -lm -Wl,--no-as-needed
 EXTRACPP_x11 = -DX11_GRAPHICS
+LINK_x11 = $$(CC)
+SRC_qt = $$(WINTTYSRC) $$(WINQT4SRC)
+OBJ_qt = $$(WINTTYOBJ) $$(WINQT4OBJ)
+LIB_qt = -lncurses -lQtCore -lQtGui
+EXTRACPP_qt = -DQT_GRAPHICS -I/usr/include/qt4
+LINK_qt = $$(CXX)
 SRC_lisp = $$(WINLISPSRC)
 OBJ_lisp = $$(WINLISPOBJ)
 LIB_lisp = $$(WINLISPLIB)
 EXTRACPP_lisp = -DLISP_GRAPHICS -DDEFAULT_WINDOW_SYS=\"lisp\"
+LINK_lisp = $$(CC)
 
 
 Makefile:
